# sentiric-sip-cli

./: Cargo.toml  Dockerfile  LOGIC.md  README.md  TASKS.md
.github/workflows/: docker-publish.yml
scripts/: resilience_suite.sh
src/: main.rs  scenario.rs
