# Dosya: Cargo.toml
[package]
name = "sentiric-sip-uac"
version = "2.5.3"
edition = "2021"
description = "Sentiric Autonomous Test Bot (Headless SIP UAC)"
authors = ["Sentiric Team"]
license = "AGPL-3.0"

[dependencies]

sentiric-telecom-client-sdk = { git = "https://github.com/sentiric/sentiric-telecom-client-sdk.git", tag = "v0.3.40" }

tokio = { version = "1", features = ["full"] }
tracing = "0.1"
# [ARCH-COMPLIANCE] constraints.yaml'ın gerektirdiği observability.logging_format için json özelliği aktif edildi.
tracing-subscriber = { version = "0.3", features = ["json"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"